crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-7.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"excessive-permissions/jobs-broaden-permissions.yml\")).run()?"
---
warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:8:3
   |
 8 | /   job1:
 9 | |     name: job1
10 | |     runs-on: ubuntu-latest
11 | |     permissions: read-all
   | |     --------------------- uses read-all permissions
12 | |     steps:
13 | |       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
14 | |         with:
15 | |           persist-credentials: false
   | |____________________________________- this job
   |
   = note: audit confidence → High

error[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:17:3
   |
17 | /   job2:
18 | |     name: job2
19 | |     runs-on: ubuntu-latest
20 | |     permissions: write-all
   | |     ^^^^^^^^^^^^^^^^^^^^^^ uses write-all permissions
21 | |     steps:
22 | |       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
23 | |         with:
24 | |           persist-credentials: false
   | |_____________________________________^ this job
   |
   = note: audit confidence → High

2 findings: 0 unknown, 0 informational, 0 low, 1 medium, 1 high
